--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Waft-jQuery version 0.01
+Waft-jQuery version 0.02
 ========================
 
 INSTALLATION
@@ -12,7 +12,7 @@ To install this module type the following:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2008 by Yuji Tamashiro
+Copyright (C) 2008, 2009 by Yuji Tamashiro
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
